--- a/style.css
+++ b/style.css
@@ -59,3 +59,15 @@ textarea{
     cursor: pointer;
     padding: 10px;
 }
+
+footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    height: 20px;
+}
+
+footer .copyright {
+    width: 100%;
+    text-align: center;
+}
