--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* COPYRIGHT (C) 2024 SWATHYMOL SAJEEV | GNU General Public License v3.0 */
+
 body {
     background-color: #2288ff;
     color: #ffffff;
